[metadata]
name = urx 
version = 0.11.1
description= Python library to control an UR robot
author= Olivier Roulet-Dubonnet
author_email= olivier.roulet@gmail.com
url= https://github.com/oroulet/python-urx, https://github.com/fhsup/URX-examples
License= GNU Lesser General Public License v3
Classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = urx
provides= urx
install_requires =
  math3d

